# playground

./: .gitignore
c/: stack_pointer
clang/: pointer.c
objc/: autorelease_usage.m  hello_world.m  makefile
rust/aragog/: Cargo.toml  README.md
rust/aragog/src/: lib.rs
rust/misc/: Cargo.toml
rust/neomovies/: Cargo.toml
rust/neomovies/src/: conn.rs  graph_ext.rs  main.rs
rust/neomovies/src/models/: mod.rs
rust/neomovies/src/models/labels/: mod.rs  movie.rs  person.rs
rust/neomovies/src/models/relations/: mod.rs
rust/tokio/: Cargo.toml  README.md
rust/tokio-chat/: Cargo.toml  README.md
swift/swiftui/notes/: swiftui_with_nvim.md
vlang/: Makefile  flake.nix  gh_notify.v  imgup.v
vlang/lib/configparser/: configparser.v
vlang/lib/daemon/: daemon.v
zig/hello-world/: README.md  build.zig
zig/hello-world/src/: main.zig
